--- a/careerbuddy/public/index.html
+++ b/careerbuddy/public/index.html
@@ -7,7 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="A one-stop career solution for students and professionals" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>CareerBuddy</title>
   </head>
